--- a/issue-tracker-nest/package.json
+++ b/issue-tracker-nest/package.json
@@ -14,7 +14,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "cd dist && node src/main",
     "migration:create": "npm run migrate:dev && mikro-orm migration:create",
-    "migrate:dev": "ts-node migrations/migrate.ts",
+    "migrate:dev": "ts-node ./migrations/migrate.ts",
     "migrate:prod": "cd dist && node migrations/migrate && cd ..",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -29,6 +29,7 @@
     "@mikro-orm/sqlite": "^4.5.9",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
