--- a/issue-tracker-nest/package.json
+++ b/issue-tracker-nest/package.json
@@ -9,19 +9,21 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "start": "env-cmd -e development nest start",
+    "start:dev": "env-cmd -e development nest start --watch",
+    "start:debug": "env-cmd -e development nest start --debug --watch",
     "start:prod": "cd dist && node src/main",
-    "migration:create": "npm run migrate:dev && mikro-orm migration:create",
-    "migrate:dev": "ts-node ./migrations/migrate.ts",
+    "migration:create": "env-cmd -e development npm run migrate:dev && env-cmd -e development mikro-orm migration:create",
+    "migrate:dev": "env-cmd -e development ts-node ./migrations/migrate.ts",
+    "migrate:test": "env-cmd -e test ts-node ./migrations/migrate.ts",
     "migrate:prod": "cd dist && node migrations/migrate && cd ..",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test": "env-cmd -e test jest",
+    "test:watch": "env-cmd -e test jest --watch",
+    "test:cov": "env-cmd -e test jest --coverage",
+    "test:debug": "env-cmd -e test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e:migrate": "env-cmd -e test mikro-orm schema:drop -r --drop-migrations-table && npm run migrate:test && env-cmd -e test mikro-orm database:import test/seed.sql",
+    "test:e2e": "npm run test:e2e:migrate && env-cmd -e test jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
     "@mikro-orm/core": "^4.5.9",
@@ -53,6 +55,7 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
+    "env-cmd": "^10.1.0",
     "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
