--- a/issue-tracker-nest/package.json
+++ b/issue-tracker-nest/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
+    "heroku-postbuild": "npm run build && npm run migrate:prod",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "env-cmd -e development nest start",
     "start:dev": "env-cmd -e development nest start --watch",
