--- a/issue-tracker-nest/.env-cmdrc
+++ b/issue-tracker-nest/.env-cmdrc
@@ -8,7 +8,10 @@
     "jwtSecret" : "testSecret"
   },
   "production": {
-    "dbName": "issue-tracker.prod-sqlite3",
+    "dbName": "issue-tracker.prod.sqlite3",
     "jwtSecret" : "prodSecret"
+  },
+  "productionSeed": {
+    "seed": true
   }
 }
