--- a/issue-tracker-client/angular.json
+++ b/issue-tracker-client/angular.json
@@ -71,6 +71,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "proxyConfig": "proxy/proxy.conf.json"
+          },
           "configurations": {
             "production": {
               "browserTarget": "issue-tracker-client:build:production"
