--- a/issue-tracker-client/package.json
+++ b/issue-tracker-client/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "node ./dist/server/server.js",
+    "start:dev": "ng serve",
+    "build": "ng build && tsc -p tsconfig.server.json",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "test:ci": "ng run issue-tracker-client:test-ci"
@@ -21,6 +22,9 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@types/express": "^4.17.13",
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^2.0.1",
     "karma-spec-reporter": "0.0.32",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
